--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres
-    container_name: rowdywish_pg
+    container_name: unrowdy_pg
     restart: unless-stopped
     env_file:
       - .env
@@ -16,7 +16,7 @@ services:
       retries: 5
   api:
     tty: true
-    container_name: rowdywish_api
+    container_name: unrowdy_api
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -31,10 +31,12 @@ services:
       - ./backend:/app
   app:
     tty: true
-    container_name: rowdywish_app
+    container_name: unrowdy_app
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    env_file:
+      - .env
     ports:
       - "80:80"
     volumes:
