--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,9 +2,7 @@
 name = "UnRowdy-backend"
 version = "0.1.0"
 description = "Add your description here"
-authors = [
-    { name = "rowdyslav", email = "rowdyslav@gmail.com" }
-]
+authors = [{ name = "rowdyslav", email = "rowdyslav@gmail.com" }]
 requires-python = ">=3.13"
 dependencies = [
     "environs==14.2.0",
@@ -18,32 +16,20 @@ dependencies = [
     "argon2-cffi>=25.1.0",
 ]
 
+[dependency-groups]
+dev = ["ruff>=0.12.4"]
+
+[tool.pyright]
+typeCheckingMode = "off"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["backend"]
 
 [tool.aerich]
 tortoise_orm = "db.ORM_CONFIG"
 location = "./migrations"
 src_folder = "./."
-
-[tool.pyright]
-typeCheckingMode = "off"
-
-[tool.uv.workspace]
-members = [
-    ".",
-    ".",
-    ".",
-]
-
-[tool.uv.sources]
-unrowdy-backend = { workspace = true }
-
-[tool.hatch.build.targets.wheel]
-packages = ["backend"]
-
-[dependency-groups]
-dev = [
-    "ruff>=0.12.4",
-]
