--- a/ruff.toml
+++ b/ruff.toml
@@ -15,8 +15,9 @@ ignore = [
     "RUF003",
     "S105",
     "BLE001",
+    "EM102",
     "PLR2004",
-
+    "TRY003",
     "INP001",
     "RUF002",
     "RUF012",
