Refactor frontend API calls to use by_api module

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,7 +26,7 @@ build-backend = "hatchling.build"
 packages = ["backend"]
 
 [tool.pyright]
-typeCheckingMode = "off"
+ignore = ["*"]
 
 [tool.aerich]
 tortoise_orm = "db.ORM_CONFIG"
