--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,19 +4,19 @@ version = "1.0"
 authors = [{ name = "rowdyslav", email = "rowdyslav@gmail.com" }]
 requires-python = ">=3.13"
 dependencies = [
-    "environs==14.2.0",
-    "fastapi[standard]==0.116.1",
-    "fastapi-login==1.10.3",
-    "icecream==2.1.3",
-    "passlib==1.7.4",
-    "pydantic==2.11.7",
-    "tortoise-orm[asyncpg]==0.25.1",
-    "aerich>=0.9.1",
-    "argon2-cffi>=25.1.0",
+    "fastapi[standard]",
+    "pydantic",
+    "tortoise-orm[asyncpg]",
+    "aerich",
+    "fastapi-login",
+    "environs",
+    "passlib",
+    "argon2-cffi",
+    "icecream",
 ]
 
 [dependency-groups]
-dev = ["ruff>=0.12.4"]
+dev = ["ruff"]
 
 [build-system]
 requires = ["hatchling"]
