--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,20 @@
 services:
   db:
-    image: postgres
-    container_name: unrowdy_pg
-    restart: unless-stopped
+    image: mongo:latest
+    container_name: unrowdy_mongo
     env_file:
       - .env
     ports:
-      - "5432:5432"
+      - "27017:27017"
     volumes:
-      - db_data:/var/lib/postgresql/data
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'",
-        ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - mongo_data:/data/db
+    # healthcheck:
+    #   test: ["CMD", "mongo", "--eval", "db.runCommand({ ping: 1 })", "--quiet"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+    #   start_period: 10s
+    # restart: unless-stopped
   backend:
     tty: true
     container_name: unrowdy_backend
@@ -26,9 +23,9 @@ services:
     env_file:
       - .env
       - backend/.env
-    depends_on:
-      db:
-        condition: service_healthy
+    # depends_on:
+    #   db:
+    #     condition: service_healthy
     ports:
       - "8000:8000"
     volumes:
@@ -63,6 +60,6 @@ services:
         - action: rebuild
           path: ./uv.lock
 volumes:
-  db_data:
+  mongo_data:
   backend_venv:
   frontend_venv:
