--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - mongo_data:/data/db
+      - db_data:/data/db
     # healthcheck:
     #   test: ["CMD", "mongo", "--eval", "db.runCommand({ ping: 1 })", "--quiet"]
     #   interval: 10s
@@ -21,7 +21,6 @@ services:
     build:
       context: ./backend
     env_file:
-      - .env
       - backend/.env
     # depends_on:
     #   db:
@@ -29,7 +28,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - backend_venv:/app/.venv
+      - backend_data:/app/.venv
     develop:
       watch:
         - action: sync
@@ -39,27 +38,20 @@ services:
             - .venv/
         - action: rebuild
           path: ./uv.lock
-  # frontend:
-  #   tty: true
-  #   container_name: unrowdy_frontend
-  #   build:
-  #     context: ./frontend
-  #   env_file:
-  #     - frontend/.env
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - frontend_venv:/app/.venv
-  #   develop:
-  #     watch:
-  #       - action: sync
-  #         path: ./frontend
-  #         target: /app
-  #         ignore:
-  #           - .venv/
-  #       - action: rebuild
-  #         path: ./uv.lock
+  frontend:
+    tty: true
+    container_name: unrowdy_frontend
+    build:
+      context: ./frontend
+    ports:
+      - "5173:5173"
+
+    volumes:
+      - frontend_data:/app
+      - /app/node_modules
+    environment:
+      CHOKIDAR_USEPOLLING: true
 volumes:
-  mongo_data:
-  backend_venv:
-  frontend_venv:
+  db_data:
+  backend_data:
+  frontend_data:
