--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   db:
     image: mongo:latest
-    container_name: unrowdy_mongo
+    container_name: unrowdy_db
     env_file:
-      - .env
+      - backend/.env
     ports:
       - "27017:27017"
     volumes:
@@ -44,14 +44,12 @@ services:
     build:
       context: ./frontend
     ports:
-      - "5173:5173"
-
+      - "80:80"
     volumes:
-      - frontend_data:/app
+      - ./frontend:/app
       - /app/node_modules
     environment:
       CHOKIDAR_USEPOLLING: true
 volumes:
   db_data:
   backend_data:
-  frontend_data:
