--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,11 +8,6 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-
-FROM nginx:alpine
-
-COPY --from=builder /app/dist /usr/share/nginx/html
-
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "run", "dev", "--", "--port", "80", "--host"]
