--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,19 +3,16 @@ FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim
 WORKDIR /app
 
 ENV UV_COMPILE_BYTECODE=1
-
 ENV UV_LINK_MODE=copy
 
-RUN --mount=type=bind,source=uv.lock,target=uv.lock \
-    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --locked --no-install-project --no-dev
+COPY pyproject.toml /app/
+
+RUN uv lock
+RUN uv sync --locked --no-install-project --no-dev
 
 COPY . /app
-RUN uv sync --locked --no-dev
 
 ENV PATH="/app/.venv/bin:$PATH"
-
-ENTRYPOINT []
 
 EXPOSE 8000
 
