--- a/backend/ruff.toml
+++ b/backend/ruff.toml
@@ -15,7 +15,7 @@ ignore = [
     "RUF003",
     "S105",
     "BLE001",
-    "EM102",
+    "EM102","RUF001",
     "PLR2004",
     "TRY003",
     "INP001",
