--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-easy-crop": "^5.5.3",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.2",
     "zod": "^4.1.5",
