--- a/tma/package.json
+++ b/tma/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@egjs/react-flicking": "^4.14.3",
     "@tailwindcss/vite": "^4.1.17",
     "@telegram-apps/sdk": "^3.11.8",
     "react": "^19.2.0",
