--- a/tma/package.json
+++ b/tma/package.json
@@ -13,6 +13,7 @@
     "@egjs/react-flicking": "^4.14.3",
     "@tailwindcss/vite": "^4.1.17",
     "@telegram-apps/sdk": "^3.11.8",
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.17"
